<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".logic.Conf">

    <Button
        android:id="@+id/button_conf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="220dp"
        android:onClick="Ingresar"
        android:text="@string/button_conf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/config_user_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner_planes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="165dp"
        android:layout_height="192dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/logo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/editText_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781"
        app:srcCompat="@drawable/logo_unal" />

    <Spinner
        android:id="@+id/spinner_planes"
        android:prompt="@string/spinner"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/button_conf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>